--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <body>
         <header>
             <nav>
-                <a href="/sidebar">Home</a>
-                <a href="/media">About</a>
-                <a href="/media_with_sidebar">Contact</a>
+                <a href="/sidebar">Sidebar</a>
+                <a href="/media">Media</a>
+                <a href="/media_with_sidebar">Media with sidebar</a>
             </nav>
         </header>
 
