--- a/index.html
+++ b/index.html
@@ -17,6 +17,71 @@
             </nav>
         </header>
 
-        <main id="content"></main>
+        <template id="sidebar">
+            <div class="container">
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+            </div>
+
+            <div class="side-bar">
+                <p>Side-bar</p>
+            </div>
+        </template>
+
+        <template id="media_with_sidebar">
+            <div class="container">
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+            </div>
+
+            <div class="side-bar">
+                <p>Side-bar</p>
+            </div>
+        </template>
+
+        <template id="media">
+            <div class="container">
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+
+                <div class="card">
+                    <h1>Title</h1>
+                    <p>Description</p>
+                </div>
+            </div>
+        </template>
+
+        <main id="content" class="main"></main>
     </body>
 </html>
